# go-py-flightclient

./: Makefile  README.md  go.mod  pyproject.toml
gclient/: Makefile  build.py  client.go  client.py  client_go.h  go.py
src/: client.go
