[tool.poetry]
name = "golang-py-client"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "golang_py_client"}]

[tool.poetry.dependencies]
python = "^3.11"
pybindgen = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
